--- a/frontend/src/app/components/account/account-transaction/account-transaction.html
+++ b/frontend/src/app/components/account/account-transaction/account-transaction.html
@@ -1,69 +1,63 @@
-        <div (dblclick)="onDoubleClick()" class="flex flex-row px-2 h-8 text-xs text-gray-500 border-b border-gray-100">
-                <div class="basis-0 flex items-center"><app-checkbox></app-checkbox></div>
-                <!-- Read mode -->
-                <ng-container *ngIf="!editing">
-                    <div class="basis-6/12 md:basis-2/12 flex items-center px-1">{{ transaction.date }}</div>
-                    <div class="basis-3/12 md:basis-2/12 flex items-center px-1">{{ transaction.label }}</div>
-                    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center px-1">{{ transaction.category }}</div>
-                    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center justify-end px-1 text-right"
-                             [class]="getAmountClass(transaction.debit)">
-                        {{ formatCurrencyWithSign(transaction.debit, false) }}
-                    </div>
-                    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center justify-end px-1 text-right"
-                             [class]="getAmountClass(transaction.credit)">
-                        {{ formatCurrencyWithSign(transaction.credit) }}
-                    </div>
-                    <div class="basis-3/12 md:basis-2/12 flex items-center justify-end px-1 text-right"
-                             [class]="getAmountClass(transaction.balance)">
-                        {{ formatCurrencyWithSign(transaction.balance) }}
-                    </div>
-                </ng-container>
-
-                <!-- Edit mode -->
-                <ng-container *ngIf="editing">
-                    <div class="basis-6/12 md:basis-2/12 flex items-center px-1">
-                      <app-date-picker
-                        class="w-full text-xs"
-                        [(ngModel)]="editModel.date"
-                      ></app-date-picker>
-                    </div>
-                    <div class="basis-3/12 md:basis-2/12 flex items-center px-1">
-                      <ng-select
-                        class="w-full text-xs transaction-select"
-                        [items]="labels"
-                        [(ngModel)]="editModel.label"
-                        [clearable]="false"
-                        [searchable]="true"
-                        [addTag]="true"
-                        dropdownPosition="bottom"
-                      ></ng-select>
-                    </div>
-                    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center px-1">
-                      <ng-select
-                        class="w-full text-xs transaction-select"
-                        [items]="categories"
-                        [(ngModel)]="editModel.category"
-                        [clearable]="false"
-                        [searchable]="true"
-                        dropdownPosition="bottom"
-                      ></ng-select>
-                    </div>
-                    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center justify-end px-1 text-right">
-                        <input class="w-full text-xs p-1 text-right border rounded" type="number" step="0.01" [(ngModel)]="editModel.debit">
-                    </div>
-                    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center justify-end px-1 text-right">
-                        <input class="w-full text-xs p-1 text-right border rounded" type="number" step="0.01" [(ngModel)]="editModel.credit">
-                    </div>
-                                <!-- last visible column reserved for action buttons in edit mode -->
-                                <div class="basis-3/12 md:basis-2/12 flex items-center justify-end px-1 text-right">
-                                    <div class="flex items-center">
-                                                        <button title="Sauvegarder" aria-label="Sauvegarder" class="p-1 bg-blue-500 text-white rounded cursor-pointer" (click)="onSave()">
-                                                            <fa-icon [icon]="icSave" class="w-4 h-4"></fa-icon>
-                                                        </button>
-                                                        <button title="Annuler" aria-label="Annuler" class="p-1 ml-0.5 bg-gray-200 rounded cursor-pointer" (click)="onCancel()">
-                                                            <fa-icon [icon]="icTimes" class="w-4 h-4"></fa-icon>
-                                                        </button>
-                                    </div>
-                                </div>
-                </ng-container>
+<div (dblclick)="onDoubleClick()" class="flex flex-row px-2 h-8 text-xs text-gray-500 border-b border-gray-100">
+  <div class="basis-0 flex items-center"><app-checkbox></app-checkbox></div>
+  <!-- Read mode -->
+  <ng-container *ngIf="!editing">
+    <div class="basis-6/12 md:basis-2/12 flex items-center px-1">{{ transaction.date }}</div>
+    <div class="basis-3/12 md:basis-2/12 flex items-center px-1">{{ transaction.label }}</div>
+    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center px-1">{{ transaction.category }}</div>
+    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center justify-end px-1 text-right"
+      [class]="getAmountClass(transaction.debit)">
+      {{ formatCurrencyWithSign(transaction.debit, false, true) }}
     </div>
+    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center justify-end px-1 text-right"
+      [class]="getAmountClass(transaction.credit)">
+      {{ formatCurrencyWithSign(transaction.credit, false, true) }}
+    </div>
+    <div class="basis-0 flex items-center  cursor-pointer">
+      <fa-icon [icon]="icCircle" class="w-4 h-4 mx-2 text-gray-300"></fa-icon>
+    </div>
+    <div class="basis-3/12 md:basis-2/12 flex items-center justify-end px-1 text-right"
+      [class]="getAmountClass(transaction.balance)">
+      {{ formatCurrencyWithSign(transaction.balance) }}
+    </div>
+  </ng-container>
+
+  <!-- Edit mode -->
+  <ng-container *ngIf="editing">
+    <div class="basis-6/12 md:basis-2/12 flex items-center px-1">
+      <app-date-picker class="w-full text-xs" [(ngModel)]="editModel.date"></app-date-picker>
+    </div>
+    <div class="basis-3/12 md:basis-2/12 flex items-center px-1">
+      <ng-select class="w-full text-xs transaction-select" [items]="labels" [(ngModel)]="editModel.label"
+        [clearable]="false" [searchable]="true" [addTag]="true" dropdownPosition="bottom"></ng-select>
+    </div>
+    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center px-1">
+      <ng-select class="w-full text-xs transaction-select" [items]="categories" [(ngModel)]="editModel.category"
+        [clearable]="false" [searchable]="true" dropdownPosition="bottom"></ng-select>
+    </div>
+    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center justify-end px-1 text-right">
+      <input class="w-full text-xs p-1 text-right border rounded" type="number" step="0.01"
+        [(ngModel)]="editModel.debit">
+    </div>
+    <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center justify-end px-1 text-right">
+      <input class="w-full text-xs p-1 text-right border rounded" type="number" step="0.01"
+        [(ngModel)]="editModel.credit">
+    </div>
+        <div class="basis-0 flex items-center  cursor-pointer">
+      <fa-icon [icon]="icCircle" class="w-4 h-4 mx-2 text-gray-300"></fa-icon>
+    </div>
+    <!-- last visible column reserved for action buttons in edit mode -->
+    <div class="basis-3/12 md:basis-2/12 flex items-center justify-end px-1 text-right">
+      <div class="flex items-center">
+        <button title="Sauvegarder" aria-label="Sauvegarder" class="p-1 bg-blue-500 text-white rounded cursor-pointer"
+          (click)="onSave()">
+          <fa-icon [icon]="icSave" class="w-4 h-4"></fa-icon>
+        </button>
+        <button title="Annuler" aria-label="Annuler" class="p-1 ml-0.5 bg-gray-200 rounded cursor-pointer"
+          (click)="onCancel()">
+          <fa-icon [icon]="icTimes" class="w-4 h-4"></fa-icon>
+        </button>
+      </div>
+    </div>
+  </ng-container>
+</div>
