--- a/frontend/src/app/components/account/account-transaction/account-transaction.html
+++ b/frontend/src/app/components/account/account-transaction/account-transaction.html
@@ -32,8 +32,14 @@
         [clearable]="false" [searchable]="true" [addTag]="true" dropdownPosition="bottom"></ng-select>
     </div>
     <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center px-1">
-      <ng-select class="w-full text-xs transaction-select" [items]="categories" [(ngModel)]="editModel.category"
-        [clearable]="false" [searchable]="true" dropdownPosition="bottom"></ng-select>
+      <ng-select
+        class="w-full text-xs transaction-select"
+        [items]="categoryOptions()"
+        [(ngModel)]="editModel.category"
+        [clearable]="false"
+        [searchable]="true"
+        dropdownPosition="bottom"
+      ></ng-select>
     </div>
     <div class="hidden basis-3/12 md:basis-2/12 md:flex items-center justify-end px-1 text-right">
       <input class="w-full text-xs p-1 text-right border rounded" type="number" step="0.01"
